@@ -86,6 +86,7 @@ APR_ADDTO(INCLUDES, [$APRUTIL_INCLUDES])
 
 AC_SUBST(APRUTIL_EXPORT_LIBS)
 AC_SUBST(APRUTIL_INCLUDES)
+AC_SUBST(APRUTIL_LDFLAGS)
 AC_SUBST(LDFLAGS)
 APR_ADDTO(LIBS,[$APRUTIL_EXPORT_LIBS])
 
