@@ -10,3 +10,4 @@
 
 APRUTIL_EXPORT_INCLUDES="@APRUTIL_INCLUDES@"
 APRUTIL_EXPORT_LIBS="@APRUTIL_EXPORT_LIBS@"
+APRUTIL_LDFLAGS="@APRUTIL_LDFLAGS@"
